--- a/draft prototype/homepage draft/home.html
+++ b/draft prototype/homepage draft/home.html
@@ -72,27 +72,27 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="http://placehold.jp/1200x600.png" alt="TAKE YOUR VACATON NOW">
+      <img src="hotelphoto.jpg"alt="TAKE YOUR VACATON NOW">
       <div class="carousel-caption">
-        ...
+        TAKE YOUR VACATON NOW
+              </div>
+    </div>
+    <div class="item">
+       <img src="hotelrestaurent.jpg" alt="TAKE YOUR VACATON NOW">
+      <div class="carousel-caption">
+        Our Restaurants
       </div>
     </div>
     <div class="item">
-       <img src="http://placehold.jp/1200x600.png" alt="TAKE YOUR VACATON NOW">
+       <img src="room.jpg" alt="TAKE YOUR VACATON NOW">
       <div class="carousel-caption">
-        ...
+        Our Rooms
       </div>
     </div>
     <div class="item">
-       <img src="http://placehold.jp/1200x600.png" alt="TAKE YOUR VACATON NOW">
+       <img src="spa.jpg" alt="TAKE YOUR VACATON NOW">
       <div class="carousel-caption">
-        ...
-      </div>
-    </div>
-    <div class="item">
-       <img src="http://placehold.jp/1200x600.png" alt="TAKE YOUR VACATON NOW">
-      <div class="carousel-caption">
-        ...
+        Our Spa
       </div>
     </div>
     ...
